56_filter_egress_traffic_ip/allow-egress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-ip
spec:
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 20.31.106.104/32
# ---
# apiVersion: projectcalico.org/v3
# kind: NetworkPolicy
# metadata:
#   name: allow-egress-external
#   namespace: production
# spec:
#   selector: run == 'nginx'
#   types:
#     - Egress
#   egress:
#     - action: Allow
#       destination:
#         nets:
#           - 1.2.3.0/24
