56_filter_egress_traffic_ip/logging-traffic.yaml
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: logging-traffic
spec:
  selector: run=='nginx'
  types:
    - Egress
  egress:
    - action: Log
      destination:
        nets:
          - 20.31.106.104/32
    - action: Allow
      destination:
        nets:
          - 20.31.106.104/32
